@@ -30,7 +30,6 @@ namespace GtkSharp.Generation {
 
 		private Parameters parms;
 		private Signature sig = null;
-		private NativeCallbackSignature native_sig = null;
 		private ReturnValue retval;
 		private bool valid = true;
 
@@ -92,8 +91,6 @@ namespace GtkSharp.Generation {
 			string wrapper = Name + "Native";
 			string qualname = MarshalType;
 
-			native_sig = new NativeCallbackSignature (parms);
-
 			StreamWriter sw = gen_info.OpenStream (qualname);
 
 			sw.WriteLine ("namespace " + NS + "Sharp {");
@@ -103,11 +100,11 @@ namespace GtkSharp.Generation {
 			sw.WriteLine ();
 			sw.WriteLine ("#region Autogenerated code");
 			sw.WriteLine ("\t[GLib.CDeclCallback]");
-			sw.WriteLine ("\tinternal delegate " + retval.MarshalType + " " + wrapper + "(" + native_sig + ");");
+			sw.WriteLine ("\tinternal delegate " + retval.MarshalType + " " + wrapper + "(" + parms.NativeCallbackSignature + ");");
 			sw.WriteLine ();
 			sw.WriteLine ("\tinternal class " + Name + "Wrapper {");
 			sw.WriteLine ();
-			sw.WriteLine ("\t\tpublic " + retval.MarshalType + " NativeCallback (" + native_sig + ")");
+			sw.WriteLine ("\t\tpublic " + retval.MarshalType + " NativeCallback (" + parms.NativeCallbackSignature + ")");
 			sw.WriteLine ("\t\t{");
 			sw.WriteLine ("\t\t\ttry {");
 
