@@ -201,7 +201,7 @@ namespace GtkSharp.Generation {
 		{
 			string import_sig = IsStatic ? "" : container_type.MarshalType + " raw";
 			import_sig += !IsStatic && Parameters.Count > 0 ? ", " : "";
-			import_sig += ImportSignature.ToString();
+			import_sig += Parameters.ImportSignature.ToString();
 			sw.WriteLine("\t\t[DllImport(\"" + LibraryName + "\")]");
 			if (retval.MarshalType.StartsWith ("[return:"))
 				sw.WriteLine("\t\t" + retval.MarshalType + " static extern " + Safety + retval.CSType + " " + CName + "(" + import_sig + ");");
